feat: enhance clear todos
